# Project_Orion

./: README.md  computer.cpp  handler.cpp  hello  hello.cpp  initializer  initializer.cpp  launcher.sh  mapmaker.cpp  newmap.cpp  recorder.cpp  recorder.h  tokenize.cpp
.github/workflows/: c-cpp.yml
Linux/: GLmain.cpp  Main.cpp  Makefile  MapRenderer.h  TextRenderer.h  Texture.cpp  glad.c  handler.cpp  shader.h  stb.cpp  tokenize.cpp
Linux/Dependencies/GLFW/include/glad/: glad.h
Linux/Project_Orion/: CMakeLists.txt  GLmain.h  Glob_vars.cpp  Main.cpp  MapRenderer.cpp  Sat_class.cpp  Sat_class.h  TextRenderer.cpp  Texture.h  handler.cpp  math_lib.cpp  math_lib.h
Linux/Project_Orion/Shaders/: Circle.fs.shader  Circle.vs.shader
Linux/Shaders/: Circle.gs.shader  image.vs.shader
Windows(x64)/: CMakeLists.txt  GLmain.cpp  MapRenderer.h  Sat_class.cpp  TextRenderer.cpp  handler.cpp  handler.h  tokenize.h
Windows(x64)/Debug/Project_Orion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project_Orion.lastbuildstate
Windows(x64)/Project_Orion/: Glob_vars.cpp  MapRenderer.cpp  Sat_class.h  TextRenderer.h  Texture.cpp  Texture.h  glad.c  handler.cpp  math_lib.h  shader.h
Windows(x64)/Project_Orion/Debug/: vc142.idb
Windows(x64)/Project_Orion/x64/Debug/Project_Orion.tlog/: CL.command.1.tlog  CL.read.1.tlog  Project_Orion.lastbuildstate  link.command.1.tlog
Windows(x64)/x64/Debug/: Project_Orion.exe.recipe  vc142.idb
Windows(x64)/x64/Debug/Project_Orion.tlog/: CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
backup/: backup.cpp  example.txt  handler.cpp
